Fixed Steam widget being too big on portrait orientation.

--- a/cardinalchains/css/cardinalchains.css
+++ b/cardinalchains/css/cardinalchains.css
@@ -83,6 +83,11 @@ a
     height: 64px;
 }
 
+.iframe_container
+{
+    overflow-x: auto;
+}
+
 #steam_widget
 {
     margin: 8px;
